package com.grpc.core.model;

public enum PayUResponseCode {
    APPROVED,
    PAYMENT_NETWORK_REJECTED,
    INSUFFICIENT_FUNDS,
    INVALID_CARD,
    EXPIRED_CARD,
    EXCEEDED_AMOUNT,
    INVALID_EXPIRATION_DATE_OR_SECURITY_CODE,
    CREDIT_CARD_NOT_AUTHORIZED_FOR_INTERNET_TRANSACTIONS,
    PAYMENT_NETWORK_NO_CONNECTION,
    PAYMENT_NETWORK_NO_RESPONSE,
    PAYMENT_NETWORK_BAD_RESPONSE
}
